--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 -->
 <html lang="en">
 	<head>
-		<title>My Profile</title>
+		<title>My Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/avatar/avatar.jpg" type="image/x-icon">
+
+		<script>
+			// Remove .html extension from page name
+			if (window.history.replaceState) {
+				window.history.replaceState(null, null, window.location.href.replace('.html', ''));
+			}
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -50,18 +58,18 @@
 						</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">								
-								<a href="coin sorter.html"  target="_blank"><img src="images/Coin sorter/unlablled cad coin sorter.jpg" class="project-thumb image fit" alt="Coin sorter" /></a>
-								<a href="coin sorter.html" target="_blank"><h3 class="project-name">Coin Sorter</h3></a>
+								<a href="coin_sorter.html"  target="_blank"><img src="images/Coin sorter/unlablled cad coin sorter.jpg" class="project-thumb image fit" alt="Coin sorter" /></a>
+								<a href="coin_sorter.html" target="_blank"><h3 class="project-name">Coin Sorter</h3></a>
 								<p>A machine that sorts coins based on their diameters</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="RF exposure monitoring station.html" target="_blank"><img src="images/RF exposure/RF expsoure monitoring station.jpg" class="project-thumb image fit" alt="RF monitoring station" /></a>
-								<a href="RF exposure monitoring station.html" target="_blank"><h3 class="project-name">RF Exposure Monitoring Station</h3></a>								
+								<a href="RF_exposure_monitoring_station.html" target="_blank"><img src="images/RF exposure/RF expsoure monitoring station.jpg" class="project-thumb image fit" alt="RF monitoring station" /></a>
+								<a href="RF_exposure_monitoring_station.html" target="_blank"><h3 class="project-name">RF Exposure Monitoring Station</h3></a>								
 								<p>A device that monitors RF exposure levels</p>
 							</article>
 							<article class="col-7 col-12-xsmall work-item">
-								<a href="game exchange platform.html" target="_blank"><img src="images/Game exchange platform/user navigation screen.png" class="project-thumb image fit" alt="Game exchange platform navigation screen" /></a>
-								<a href="game exchange platform.html" target="_blank"><h3 class="project-name">Game Exchange Platform</h3></a>															
+								<a href="game_exchange_platform.html" target="_blank"><img src="images/Game exchange platform/user navigation screen.png" class="project-thumb image fit" alt="Game exchange platform navigation screen" /></a>
+								<a href="game_exchange_platform.html" target="_blank"><h3 class="project-name">Game Exchange Platform</h3></a>															
 								<p>A platform where people exchange games</p>
 							</article>
 							
