--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>My Portfolio</title>
+		<title>Kharendwe Makhani's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,8 +24,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a class="image avatar"><img src="images/avatar/cv photo copy_resized.jpg" style alt="A selfie of myself" /></a>
-					<h1>I am<strong> Makhani Kharendwe</strong>, an aspiring <br />
+					<a class="image avatar"><img src="images/avatar/cv photo copy_resized.jpg" style alt="profile picture" /></a>
+					<h1>I am<strong> Kharendwe Makhani</strong>, an aspiring <br />
 						mechatronic engineer.
 					</h1>
 				</div>
@@ -78,7 +78,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 							<div class="col-6 col-12-small">
 								<ul class="labeled-icons">
@@ -99,7 +99,7 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
 				<!--
